--- a/style.css
+++ b/style.css
@@ -3,25 +3,51 @@
 }
 
 body {
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     overflow: hidden;
     font-family:'Trebuchet MS', sans-serif;
     background: #f6f7fb;
+    margin: 0 auto;
+}
+h1 {
+    margin: 0 0 60px 0;
+    padding: 0;
 }
 
 .container {
     text-align: center;
 }
 
+.text-content {
+    display: flex;
+    justify-content: space-evenly;
+    width: 530px;
+    margin-bottom: 40px;
+    position: absolute;
+    bottom: 40%;
+}
+.text{
+    font-size: 12px;
+    color: #777;
+}
+
+.text.dark{
+    color: #000;
+}
+
 .progress-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     text-align: center;
     max-width: 100%;
     width: 400px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
+    margin-inline: auto;
     position: relative;
 }
 
@@ -41,10 +67,11 @@ body {
     transform: translateY(-50%);
     height: 4px;
     width: 0%;
-    background: #3498db;
+    background: #4CB71A;
     z-index: -1;
     transition: 0.4s ease-in;
 }
+
 
 .circle {
     background-color: #fff;
@@ -60,7 +87,8 @@ body {
     transition: 0.4s ease;
 }
 .circle.active {
-   border: 3px solid #3498db;
+   border: 3px solid #4CB71A;
+   color: #000;
 }
 
 .btn {
@@ -81,4 +109,12 @@ body {
 .btn:disabled{
     background-color: #777;
     cursor: not-allowed;
+}
+
+
+
+@media(max-width: 568px){
+    body {
+        margin-left: 100px;
+    }
 }
